# sensor-data-bridge

./: .gitignore  DOC.md  Dockerfile  HOW_TO.md  README.md  SECURITY-OWASP.md  SONAR_README.md  SONAR_SETUP.md  owasp-dependency-check-suppressions.xml  pom.xml  settings.gradle  sonar-project.properties  spotbugs-exclude.xml
.github/workflows/: gradle.yml  rust.yml
cayenne/: DOC.md  pom.xml
collector-client/: README.md  build.gradle  pom.xml
collector-client/src/main/resources/: config.properties
distroless-healthcheck-client/: Cargo.toml  LICENSE  README.md
distroless-healthcheck-client/src/: main.rs
docker/: sensor-data-bridge.yaml
gradle/: libs.versions.toml
rust-collector/: Cargo.toml  Dockerfile  README.md  log4rs.yaml  sonar-project.properties  sonar.sh
rust-collector/config/docker/: Dockerfile.hardened  docker-compose.yml  sample.env
rust-collector/config/pg/conf/: custom_pg_hba.conf
rust-collector/config/pg/sql/: init-db.sql  ttn_uplink.sql
rust-collector/src/: lib.rs  main.rs  ttn_uplink_message.rs
rust-collector/tests/: ttn_uplink_message.rs
sensor-data-bridge/: ARCHITECTURE.md  DOC.md  build.gradle  pom.xml
sensor-data-bridge/src/main/resources/: log4j.properties
sensor-data-bridge/src/test/resources/: sensor-data-bridge-ext.yaml  sensor-data-bridge.yaml
sensor-data-bridge/test/java/nl/bertriksikken/geo/: SimpleGeoModelTest.java
sensor-data-bridge/test/java/nl/bertriksikken/gls/: GeoLocationResponseTest.java  GeoLocationServiceTest.java  IGeoLocationRestApiTest.java
(+132 files in other folders)
