[package]
name = "rust-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
postgresql = "0.1.1"
hex = "0.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
clippy = "0.0.302"
cargo-tarpaulin = "0.35.2"
