[package]
name = "rust-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.13.0"
dotenv = "0.15.0"
postgres = "0.19.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = "0.7.17"
rand = "0.9.4"
futures-util = "0.3"
bytes = "1.6"
